--- a/_posts/blog/2018-04-13-tips-for-exam-70-774.md
+++ b/_posts/blog/2018-04-13-tips-for-exam-70-774.md
@@ -1,22 +1,22 @@
 ---
-title: Tips for Exam 70-774 - Performing Cloud Data Science with Azure ML
+title: Prepare for Exam 70-774: Performing Cloud Data Science with Azure Machine Learning
 layout: post
 modified: 
 categories: blog
 excerpt: 
 tags:
 - machine learning
-- azure ml
+- azure
 - 70-774
-date: '2018-04-03'
+date: '2018-04-13'
 image:
   feature: 
 share: true
 comments: true
-published: false
+published: true
 ---
 
-I recently took and passed [Exam 70-774 - Performing Cloud Data Science with Azure Machine Learning](https://www.microsoft.com/en-us/learning/exam-70-774.aspx) and thought it may be helpful to provide some guidance on how best to prepare for the exam.
+I recently passed [Exam 70-774 - Performing Cloud Data Science with Azure Machine Learning](https://www.microsoft.com/en-us/learning/exam-70-774.aspx) and thought it may be helpful to provide some guidance on how best to prepare for the exam.
 
 It is worth noting that, at the time of writing, the exam focuses on Azure Machine Learning Studio for the most part. It does not cover the newer Azure Machine Learning Services, but does require some knowledge of Azure Cognitive Services and Microsoft CNTK.
 
@@ -26,7 +26,7 @@ The exam is broken into 4 areas from which questions will be focused. This lines
 
 You will want to become familiar with the various ways to import and export data within Azure Machine Learning. 
 
-### Importing data
+## Importing data
 This is done in six ways:
 
 1. Uploading from a local file via ML Studio
@@ -38,7 +38,7 @@ This is done in six ways:
 
 Azure ML supports several file formats and data types - definitely important to be aware of the common ones. Check the list [here](https://docs.microsoft.com/en-us/azure/machine-learning/studio/import-data#data-formats-and-data-types-supported)
 
-#### [Import Data](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/import-data) Module
+### [Import Data](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/import-data) Module
 
 It is key to become familar with the options for this module. It supports the following ways to bring data into an Azure ML Studio experiment:
 
@@ -51,21 +51,21 @@ It is key to become familar with the options for this module. It supports the fo
 * A data feed provider, OData currently
 * Azure Cosmos DB
 
-Worth noting:
+**Worth noting**:
 
 * Web URL has to be public (authentication is not supported)
-* Accessing SQL Server On Prem (or locked down in Azure VM) can be done via the [Data Management Gateway](https://docs.microsoft.com/en-us/azure/machine-learning/studio/use-data-from-an-on-premises-sql-server) that provides access to your on-premises SQL Server. 
+* Accessing SQL Server on premises (or locked down in an Azure VM) can be done via the [Data Management Gateway](https://docs.microsoft.com/en-us/azure/machine-learning/studio/use-data-from-an-on-premises-sql-server) that provides access to your on-premises SQL Server. 
 * Accessing data from Hadoop is done via Hive
-* For Azure SQL, Hadoop, SQL Server, Cosmos Db you have the ability to pass in a query as part of the import module to filter your data.
+* For Azure SQL, Hadoop, SQL Server, Cosmos Db you have the ability to pass in a query as part of the **import module** to filter your data.
 * The **Use cached results** option caches the data in the Azure ML experiment after the first run to speed up performance. Use this if the data does not change often.
 
-###Exporting Data
+## Exporting Data
 To export data you use one of the following ways:
 1. Export Data Module.
 2. Execute Script module
 3. Convert to CSV and download dataset locally.
 
-#### Export Data Module
+### [Export Data](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/export-data) Module
 
 This module supports exporting data to the following:
 
@@ -74,15 +74,14 @@ This module supports exporting data to the following:
 * Azure Table
 * Azure Blob Storage
 
-Worth noting:
-
-* The option, *Use cached results*, lets you repeat the experiment without rewriting the same results each time.
-
 ## Explore and summarize data
 
-In Azure ML Studio experiments there are several ways to explore and summarize data.Here are some tips:
+In Azure ML Studio experiments there are several ways to explore and summarize data. 
+
+**Worth Noting**:
 
 * There is a [Summarize](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/summarize-data) Module that is worth understanding.
+
 * [This video](https://www.youtube.com/watch?v=jAlmiDx3voE) does a decent job highlighting how you can explore data in Azure ML Studio.
 * There are two group by modules: [Group Data into Bins](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/group-data-into-bins) and [Group Categorical Values](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/group-categorical-values)
 * You can convert columns that contain categorical values into a series of binary indicator columns that can more easily be used as features in a machine learning model using the [Convert To Indicator Values](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/convert-to-indicator-values) module.
@@ -101,12 +100,13 @@ There are various ways to clean data right within Azure ML Studio. Some of the r
 
 [Here](https://docs.microsoft.com/en-us/azure/machine-learning/team-data-science-process/prepare-data) is a great document on details of cleaning data.
 
-Some tips:
+**Worth noting**:
 
 * The [Clean Missing Data](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/clean-missing-data) Module supports cleaning missing data in various ways.
-* Understand the various ways you can go about cleaning missing data, including via MICE and Probablistic PCA
+
+* Understand the options you can use to clean missing data, including via MICE and Probablistic PCA.
 * You can have Azure ML generate a **missing indicator value** column to flag which columns had a value replaced.
-* There are two outputs from Clean Missing Data module. One is the cleaned data set, the other is the transform that you can reuse elsewhere.
+* There are two outputs from *Clean Missing Data* module. One is the cleaned data set, the other is the transform that you can reuse elsewhere.
 * You can identify and handle outliers using the [Clip Values](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/clip-values) module.
 * If you want to remove a column you could use Clean Missing Data or you could use the [Select Columns in Dataset](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/select-columns-in-dataset) module
 * You can use the [Partition and Sample](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/partition-and-sample) module to reduce the size of your dataset while maintain the same ratios.
@@ -115,8 +115,9 @@ Some tips:
 ## Perform feature engineering
 There is a great document [here](https://docs.microsoft.com/en-us/azure/machine-learning/team-data-science-process/create-features) around feature engineering.
 
-Some useful tips:
+**Worth noting**:
 * There are various modules for merging datasets in Azure ML Studio.
+
 * There are three modules to help automatically select the right features:
     - [Filter Based Feature Selection](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/filter-based-feature-selection)
     - [Fisher Linear Discriminant Analysis](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/fisher-linear-discriminant-analysis)
@@ -126,42 +127,47 @@ Some useful tips:
 
 # Develop Machine Learning Models
 
-There are many algorithms supported in Azure ML studio. I would highly recommend using this cheat sheet as a starting point.
+There are many algorithms supported in Azure ML studio. I would highly recommend using this [cheat sheet](https://docs.microsoft.com/en-us/azure/machine-learning/studio/algorithm-cheat-sheet) as a starting point.
 
-Some additional tips:
+**Worth noting**:
 
 * The following problem types you can solve for in Azure ML:
-1. Classification (is this A or B?)
-2. Regression (How much/many?)
-3. Clustering (How are these related?)
-4. Anomaly Detection (Is this weird)
+    1. Classification (is this A or B?)
+    2. Regression (How much/many?)
+    3. Clustering (How are these related?)
+    4. Anomaly Detection (Is this weird)
 
 * All are supervised learning except for K-means which is unsupervised. Supervised just means your training data has labels.
 * It is worth understanding the [Train Matchbox Recommender](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/train-matchbox-recommender) for generating recommendations (either by user or user and item).
 * You can use the [Tune Hyperparameters](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/tune-model-hyperparameters) module to automatically choose the right parameters for your model.
 * Use the split data module to split your data into training and testing sets.
-* Use the [Cross-Validate](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/cross-validate-model module to understand the quality of your dataset and if your model is effected by variations in it.
+* Use the [Cross-Validate](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/cross-validate-model) module to understand the quality of your dataset and if your model is affected by variations in it. Think of this as a module as an enhancement over simply splitting and testing.
 * You can compare two algorithm scores using the Evaluate module.
 * Understand score and evaluation metrics. [This post](https://docs.microsoft.com/en-us/azure/machine-learning/studio/evaluate-model-performance) does a great job breaking this down.
 
 ## Operationalize and Manage Azure Machine Learning services
 
 * Understand how to create a predictive web service and deploy it. See [here](https://docs.microsoft.com/en-us/azure/machine-learning/studio/walkthrough-5-publish-web-service)
-* To reduce or change the columnns used for input or output in the deployed web service use the Select Columns in Dataset Module.
+
+* To reduce or change the columnns used for input or output in the deployed web service use the **Select Columns in Dataset Module**.
 * A deployed web service has both a Request/Response mode and a batch mode and you can interact with both via a REST api.
 * Understand the outputs from the deployed predictive model. This will be the "Scored Label" and "Scored Probability". Note that Scored Probability is the probability the result belongs to the positive class.
->Azure Machine Learning automatically decides which of the two classes in the dataset is the positive class. If the class labels are Boolean or integers, then the ‘true’ or ‘1’ labeled instances are assigned the positive class. If the labels are strings, as in the case of the income dataset, the labels are sorted alphabetically and the first level is chosen to be the negative class while the second level is the positive class.
+    >Azure Machine Learning automatically decides which of the two classes in the dataset is the positive class. If the class labels are Boolean or integers, then the ‘true’ or ‘1’ labeled instances are assigned the positive class. If the labels are strings, as in the case of the income dataset, the labels are sorted alphabetically and the first level is chosen to be the negative class while the second level is the positive class.
 
 * You can setup your experiment for retraining.
 * You can connect to your published Azure ML experiment from [Excel](https://docs.microsoft.com/en-us/azure/machine-learning/studio/excel-add-in-for-web-services).
+
+
+# Leverage other services for Machine Learning
+* [Get an understanding of Neural Networks](https://www.youtube.com/watch?v=J7rA7ynaZbk) - Microsoft CNTK is a framework for building neural networks. Think of it as similar to Tensorflow.
+
+* In Azure the N-Series machines support NVidia GPUs and can be used for training a neural network.
+* Check out the [Azure AI Gallery](https://gallery.azure.ai/) - it was just recently renamed and so may also be called Cortana Intelligence Gallery.
+* Gain an understanding of how you can use [HDInsight for Machine Learning](https://docs.microsoft.com/en-us/azure/hdinsight/hdinsight-machine-learning-overview)
+* Understand how to enable support for R in SQL Server and how you would [call an R script](https://docs.microsoft.com/en-us/sql/relational-databases/system-stored-procedures/sp-execute-external-script-transact-sql) with data in SQL.
 * Understand the following key Azure Cognitive Services: 
     - [Vision](https://www.microsoft.com/cognitive-services/en-us/computer-vision-api)
     - [Language Understanding](https://www.microsoft.com/cognitive-services/en-us/language-understanding-intelligent-service-luis)
     - [Knowledge](https://www.microsoft.com/cognitive-services/en-us/recommendations-api)
 
-# Leverage other services for Machine Learning
-* [Get an understanding of Neural Networks](https://www.youtube.com/watch?v=J7rA7ynaZbk) - Microsoft CNTK is a framework for building neural networks. Think of it as similar to Tensorflow.
-* In Azure the N-Series machines support NVidia GPUs and can be used for training a neural network.
-* Check out the [Azure AI Gallery](https://gallery.azure.ai/) - it was just recently renamed and so may also be called Cortana Intelligence Gallery.
-* Gain an understanding of how you can use [HDInsight for Machine Learning](https://docs.microsoft.com/en-us/azure/hdinsight/hdinsight-machine-learning-overview)
-* Understand how to enable support for R in SQL Server and how you would [call an R script](https://docs.microsoft.com/en-us/sql/relational-databases/system-stored-procedures/sp-execute-external-script-transact-sql) with data in SQL.
+Finally, Microsoft just released a book to help with this exam - check it out [here](https://www.microsoftpressstore.com/store/exam-ref-70-774-perform-cloud-data-science-with-azure-9781509307012)
