fixed error in latest post

--- a/_posts/blog/2018-04-13-tips-for-exam-70-774.md
+++ b/_posts/blog/2018-04-13-tips-for-exam-70-774.md
@@ -1,5 +1,5 @@
 ---
-title: Prepare for Exam 70-774: Performing Cloud Data Science with Azure Machine Learning
+title: Prepare for Exam 70-774 - Performing Cloud Data Science with Azure Machine Learning
 layout: post
 modified: 
 categories: blog
