updqted excerpt behavior

--- a/_posts/blog/2018-04-13-tips-for-exam-70-774.md
+++ b/_posts/blog/2018-04-13-tips-for-exam-70-774.md
@@ -17,7 +17,7 @@ published: true
 ---
 
 I recently passed [Exam 70-774 - Performing Cloud Data Science with Azure Machine Learning](https://www.microsoft.com/en-us/learning/exam-70-774.aspx) and thought it may be helpful to provide some guidance on how best to prepare for the exam.
-
+<!--more-->
 It is worth noting that, at the time of writing, the exam focuses on Azure Machine Learning Studio for the most part. It does not cover the newer Azure Machine Learning Services, but does require some knowledge of Azure Cognitive Services and Microsoft CNTK.
 
 The exam is broken into 4 areas from which questions will be focused. This lines up with the syllabus outlined on the exam page.
